# SimpleFtp

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
Client/: CFileTransporter.cpp  CFileTransporter.h  Color.h  ThreadPool.h  TransException.h
Client/headers/: Client.h
Server/: CommandExecutor.cpp  CommandParser.cpp  FileOperations.cpp  FileTransporter.cpp  Properties.cpp  Server.cpp  config.txt
Server/headers/: CommandExecutor.h  CommandParser.h  FileOperations.h  FileTransporter.h  FtpException.h  Properties.h  Request.h  Response.h  Server.h
Server/work_dir/: readme.txt
